add model to view home/Index

--- a/PlanesTour/Views/Shared/_Layout.cshtml
+++ b/PlanesTour/Views/Shared/_Layout.cshtml
@@ -16,13 +16,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                <a class="navbar-brand" href="/">Planes Tour</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li><a href="/">Inicio</a></li>
+                    <li><a href="/location">Destinos</a></li>
+                    <li><a href="home/about">Inicio</a></li>                   
                 </ul>
             </div>
         </div>
