--- a/PlanesTour/Views/Home/Index.cshtml
+++ b/PlanesTour/Views/Home/Index.cshtml
@@ -1,40 +1,59 @@
-﻿@model List<PlanesTour.Core.Domain.Hotel>
+﻿@model PlanesTour.ViewModels.HomeViewModel
 
 @{
     ViewBag.Title = "Home Page";
 }
-<!-- Page Header -->
-<div class="row">
-    <div class="col-lg-12">
-        <h1 class="page-header">
-            Hoteles
-        </h1>
+
+<div id="myCarousel" class="carousel slide container-fluid" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+        <li data-target="#myCarousel" data-slide-to="3"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+        <div class="item active">
+            <img src="~/Assets/Images/placeholdit1280x600.png" alt="Chania">
+        </div>
+
+        <div class="item">
+            <img src="~/Assets/Images/placeholdit1280x600.png" alt="Chania">
+
+        </div>
+
+        <div class="item">
+            <img src="~/Assets/Images/placeholdit1280x600.png" alt="Chania">
+
+        </div>
+
+        <div class="item">
+            <img src="~/Assets/Images/placeholdit1280x600.png" alt="Chania">
+        </div>
     </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
 </div>
-<!-- /.row -->
-<!-- Projects Row -->
+
 <div class="row">
-    @{
-        var i = 1;
-    }
-    @foreach (var hotel in Model)
+
+    @foreach (var offert in Model.Offerts)
     {
-        i++;
-        if (i % 3 == 0)
-        {
-            </div><div class="row">
-        }
-    <div class="col-md-4 portfolio-item">
-        <a href="#">
-            <img class="img-responsive" src="http://placehold.it/700x400" alt="">
-        </a>
-        <h3>
-            <a href="#">@hotel.Name</a>
-        </h3>
-
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-    </div>
+        <div class="col-md-4 portfolio-item">
+            <a href="#">
+                <img class="img-responsive" src="http://placehold.it/700x400" alt="">
+            </a>
+            <p>@offert.Description</p>
+        </div>
     }
-
 </div>
-<!-- /.row -->
