--- a/PlanesTour/Views/Shared/_Layout.cshtml
+++ b/PlanesTour/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="/">Inicio</a></li>
                     <li><a href="/location">Destinos</a></li>
-                    <li><a href="home/about">Inicio</a></li>                   
+                    <li><a href="/home/about">Acerca de Nosotros</a></li>                   
                 </ul>
             </div>
         </div>
