--- a/PlanesTour/Views/Home/Index.cshtml
+++ b/PlanesTour/Views/Home/Index.cshtml
@@ -1,71 +1,242 @@
 ﻿@model PlanesTour.ViewModels.Home.Index
 
-@{
-    ViewBag.Title = "Index";
-}
-
-<div id="myCarousel" class="carousel slide container-fluid" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-        <li data-target="#myCarousel" data-slide-to="3"></li>
-    </ol>
-
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-        <div class="item active">
-            <img src="~/Assets/Images/placeholdit1280x600.png" alt="Chania">
-        </div>
-
-        <div class="item">
-            <img src="~/Assets/Images/placeholdit1280x600.png" alt="Chania">
-
-        </div>
-
-        <div class="item">
-            <img src="~/Assets/Images/placeholdit1280x600.png" alt="Chania">
-
-        </div>
-
-        <div class="item">
-            <img src="~/Assets/Images/placeholdit1280x600.png" alt="Chania">
+   <!-- Intro -->
+<section id="intro">
+    <div class="intro-content">
+        <div class="intro-inner">
+            <div class="container text-center">
+                <div class="row">
+                    <div class="col-sm-8 col-sm-offset-2">
+                        <h1 class="intro-heading">Lo que buscas, Lo encontraras</h1>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-8 col-sm-offset-2">
+                        <a href="" class="btn btn-primary btn-xl">Busca el mejor hotel</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+</section>
 
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
-<hr />
-<div class="row">
+ <!-- Offers -->
+<section>
+    <div class="container owl-custom">
+        <ul id="owl-offers" class="owl-carousel owl-theme list-unstyled">
+            <li>
+                <div class="card-wide" style="background-image: url('/Content/img/img-1.jpg')">
+                    <a href="">
+                        <div class="card-content">
+                            <h3 class="card-title">Ahorra hasta un 50%</h3>
+                        </div>
+                    </a>
+                </div>
+            </li>
+            <li>
+                <div class="card-wide" style="background-image: url('/Content/img/img-2.jpg')">
+                    <a href="">
+                        <div class="card-content">
+                            <h3 class="card-title">El hotel con mas lujos</h3>
+                        </div>
+                    </a>
+                </div>
+            </li>
+            <li>
+                <div class="card-wide" style="background-image: url('/Content/img/img-3.jpg')">
+                    <a href="">
+                        <div class="card-content">
+                            <h3 class="card-title">El hotel con mas lujos</h3>
+                        </div>
+                    </a>
+                </div>
+            </li>
+            <li>
+                <div class="card-wide" style="background-image: url('/Content/img/img-1.jpg')">
+                    <a href="">
+                        <div class="card-content">
+                            <h3 class="card-title">Ahorra hasta un 50%</h3>
+                        </div>
+                    </a>
+                </div>
+            </li>
+            <li>
+                <div class="card-wide" style="background-image: url('/Content/img/img-2.jpg')">
+                    <a href="">
+                        <div class="card-content">
+                            <h3 class="card-title">Gana una noche gratis</h3>
+                        </div>
+                    </a>
+                </div>
+            </li>
+            <li>
+                <div class="card-wide" style="background-image: url('/Content/img/img-3.jpg')">
+                    <a href="">
+                        <div class="card-content">
+                            <h3 class="card-title">El hotel con mas lujos</h3>
+                        </div>
+                    </a>
+                </div>
+            </li>
+        </ul>
+        <div class="prev prev-1">
+            <span class="fa fa-angle-left"/>
+        </div>
+        <div class="next next-1">
+            <span class="fa fa-angle-right"/>
+        </div>
+    </div>
+</section>
 
-    @foreach (var offert in Model.Offerts)
-    {
-        <div class="col-md-4 portfolio-item">
-            <a href="#">
-                <img class="img-responsive" src="~/Assets/Images/placeholdit400x300.png" alt="">
-            </a>
-            <p>@offert.Description</p>
+<!-- Best Hotel -->
+<section class="bg-gray">
+    <div class="container">
+        <div class="row text-center">
+            <div class="col-md-12">
+                <h2 class="heading-section">Lugares recomendados</h2>
+            </div>
         </div>
-    }
-</div>
-<hr />
-<div class="row">
-    @foreach (var hotel in Model.Hotels)
-    {
-        <div class="col-md-4 portfolio-item">
-            <a href="hotel/detail/@hotel.Id">
-                <img class="img-responsive" src="~/Assets/Images/placeholdit400x300.png" alt="" />
-            </a>
-            <p>@hotel.Description</p>
+    </div>
+    <div class="container owl-custom">
+        <ul id="owl-best-hotel" class="owl-carousel owl-theme list-unstyled">
+            <li>
+                <figure class="card-simple text-center">
+                    <a href="">
+                        <div class="card-img" style="background-image: url('../../Content/img/img-6.jpg')">
+                            <div class="card-img-obfuscar">
+                                <span class="fa fa-arrow-circle-right fa-3x"></span>
+                            </div>
+                        </div>
+                    </a>
+                    <figcaption>
+                        <h4 class="card-title">Hotel Barcelo</h4>
+                        <span class="text-gray">Punta Cana</span>
+                        <div class="star-rater">
+                            <span class="fa fa-star rating"></span>
+                            <span class="fa fa-star rating"></span>
+                            <span class="fa fa-star rating"></span>
+                            <span class="fa fa-star rating"></span>
+                            <span class="fa fa-star"></span>
+                        </div>
+                    </figcaption>
+                </figure>
+            </li>
+            <li>
+                <figure class="card-simple text-center">
+                    <a href="">
+                        <div class="card-img" style="background-image: url('../../Content/img/img-7.jpg')">
+                            <div class="card-img-obfuscar">
+                                <span class="fa fa-arrow-circle-right fa-3x"></span>
+                            </div>
+                        </div>
+                    </a>
+                    <figcaption>
+                        <h4 class="card-title">Hotel Cancun</h4>
+                        <span class="text-gray">Puerto Plata</span>
+                        <div class="star-rater">
+                            <span class="fa fa-star rating"></span>
+                            <span class="fa fa-star rating"></span>
+                            <span class="fa fa-star rating"></span>
+                            <span class="fa fa-star rating"></span>
+                            <span class="fa fa-star"></span>
+                        </div>
+                    </figcaption>
+                </figure>
+            </li>
+            <li>
+                <figure class="card-simple text-center">
+                    <a href="">
+                        <div class="card-img" style="background-image: url('../../Content/img/img-6.jpg')">
+                            <div class="card-img-obfuscar">
+                                <span class="fa fa-arrow-circle-right fa-3x"></span>
+                            </div>
+                        </div>
+                    </a>
+                    <figcaption>
+                        <h4 class="card-title">Hotel Barcelo</h4>
+                        <span class="text-gray">Punta Cana</span>
+                        <div class="star-rater">
+                            <span class="fa fa-star rating"></span>
+                            <span class="fa fa-star rating"></span>
+                            <span class="fa fa-star rating"></span>
+                            <span class="fa fa-star rating"></span>
+                            <span class="fa fa-star"></span>
+                        </div>
+                    </figcaption>
+                </figure>
+            </li>
+            <li>
+                <figure class="card-simple text-center">
+                    <a href="">
+                        <div class="card-img" style="background-image: url('../../Content/img/img-7.jpg')">
+                            <div class="card-img-obfuscar">
+                                <span class="fa fa-arrow-circle-right fa-3x"></span>
+                            </div>
+                        </div>
+                    </a>
+                    <figcaption>
+                        <h4 class="card-title">Hotel Cancun</h4>
+                        <span class="text-gray">Puerto Plata</span>
+                        <div class="star-rater">
+                            <span class="fa fa-star rating"></span>
+                            <span class="fa fa-star rating"></span>
+                            <span class="fa fa-star rating"></span>
+                            <span class="fa fa-star rating"></span>
+                            <span class="fa fa-star"></span>
+                        </div>
+                    </figcaption>
+                </figure>
+            </li>
+            <li>
+                <figure class="card-simple text-center">
+                    <a href="">
+                        <div class="card-img" style="background-image: url('../../Content/img/img-6.jpg')">
+                            <div class="card-img-obfuscar">
+                                <span class="fa fa-arrow-circle-right fa-3x"></span>
+                            </div>
+                        </div>
+                    </a>
+                    <figcaption>
+                        <h4 class="card-title">Hotel Barcelo</h4>
+                        <span class="text-gray">Punta Cana</span>
+                        <div class="star-rater">
+                            <span class="fa fa-star rating"></span>
+                            <span class="fa fa-star rating"></span>
+                            <span class="fa fa-star rating"></span>
+                            <span class="fa fa-star rating"></span>
+                            <span class="fa fa-star"></span>
+                        </div>
+                    </figcaption>
+                </figure>
+            </li>
+            <li>
+                <figure class="card-simple text-center">
+                    <a href="">
+                        <div class="card-img" style="background-image: url('../../Content/img/img-7.jpg')">
+                            <div class="card-img-obfuscar">
+                                <span class="fa fa-arrow-circle-right fa-3x"></span>
+                            </div>
+                        </div>
+                    </a>
+                    <figcaption>
+                        <h4 class="card-title">Hotel Cancun</h4>
+                        <span class="text-gray">Puerto Plata</span>
+                        <div class="star-rater">
+                            <span class="fa fa-star rating"></span>
+                            <span class="fa fa-star rating"></span>
+                            <span class="fa fa-star rating"></span>
+                            <span class="fa fa-star rating"></span>
+                            <span class="fa fa-star"></span>
+                        </div>
+                    </figcaption>
+                </figure>
+            </li>
+        </ul>
+        <div class="prev prev-2">
+            <span class="fa fa-angle-left"/>
         </div>
-    }
-</div>
+        <div class="next next-2">
+            <span class="fa fa-angle-right"/>
+        </div>
+    </div>
+</section>
