--- a/PlanesTour/Views/Shared/_Layout.cshtml
+++ b/PlanesTour/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title Planes Tour</title>
     @*@Styles.Render("~/Content/css")*@
     @Scripts.Render("~/bundles/modernizr")
     <!-- Bootstrap CSS -->
@@ -36,7 +36,7 @@
                     </a>
                 </div>
                 <div class="col-sm-6 hidden-xs text-right">
-                    <span class="header-lead">Reserva en linea o<br>llamando al (000) 000 0000</span>
+                    <span class="header-lead">Teléfono (809) 596 8598<br>Whatsapp (829) 927 4596</span>
                 </div>
             </div>
         </div>
@@ -56,10 +56,10 @@
             <div class="collapse navbar-collapse" id="pt-navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li class="active">
-                        <a href="">Inicio</a>
+                        <a href="/">Inicio</a>
                     </li>
                     <li>
-                        <a href="">Hoteles</a>
+                        <a href="/Locations/">Destinos</a>
                     </li>
                     <li>
                         <a href="">Acerca de nosotros</a>
@@ -85,10 +85,10 @@
                     <h4>Nuestras secciones</h4>
                     <ul class="list-unstyled">
                         <li class="active">
-                            <a href="" class="text-gray">Inicio</a>
+                            <a href="/" class="text-gray">Inicio</a>
                         </li>
                         <li>
-                            <a href="" class="text-gray">Hoteles</a>
+                            <a href="/Locations" class="text-gray">Hoteles</a>
                         </li>
                         <li>
                             <a href="" class="text-gray">Acerca de nosotros</a>
@@ -108,7 +108,7 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-12">
-                    <span>&copy; 2016 Todos los derechos reservados | Este Website fue creado por <a href="">Twist Consulting</a></span>
+                    <span>&copy; @DateTime.Now.ToString("yyyy") Todos los derechos reservados | Este Website fue creado por <a href="">Twist Consulting</a></span>
                 </div>
             </div>
         </div>
