add custom routing and azure Insight tools

--- a/PlanesTour/Views/Shared/_Layout.cshtml
+++ b/PlanesTour/Views/Shared/_Layout.cshtml
@@ -59,7 +59,7 @@
                         <a href="/">Inicio</a>
                     </li>
                     <li>
-                        <a href="/Locations/">Destinos</a>
+                        <a href="/Location/">Destinos</a>
                     </li>
                     <li>
                         <a href="">Acerca de nosotros</a>
