add AdminController and do some refactors

--- a/PlanesTour/Views/Home/Index.cshtml
+++ b/PlanesTour/Views/Home/Index.cshtml
@@ -80,10 +80,10 @@
             </li>
         </ul>
         <div class="prev prev-1">
-            <span class="fa fa-angle-left"/>
+            <span class="fa fa-angle-left"></span>
         </div>
         <div class="next next-1">
-            <span class="fa fa-angle-right"/>
+            <span class="fa fa-angle-right"></span>
         </div>
     </div>
 </section>
@@ -127,10 +127,10 @@
             }
         </ul>
         <div class="prev prev-2">
-            <span class="fa fa-angle-left" />
+            <span class="fa fa-angle-left" ></span>
         </div>
         <div class="next next-2">
-            <span class="fa fa-angle-right" />
+            <span class="fa fa-angle-right" ></span>
         </div>
     </div>
 </section>
