--- a/PlanesTour/Content/styles.css
+++ b/PlanesTour/Content/styles.css
@@ -100,13 +100,17 @@ header .header-lead {
  
 --------------------------------- */
 .navbar-default {
-  background-color: #55AB26;
+    background-color: #55AB26;
   border-style: none;
-  -webkit-box-shadow: 0px 2px 17px rgba(19, 19, 19, 0.3);
-  -moz-box-shadow: 0px 2px 17px rgba(19, 19, 19, 0.3);
-  box-shadow: 0px 2px 17px rgba(19, 19, 19, 0.3);
+    -webkit-box-shadow: 0 2px 17px #131313;
+    -webkit-box-shadow: 0 2px 17px #131313;
+    -moz-box-shadow: 0 2px 17px #131313;
+    -moz-box-shadow: 0 2px 17px rgba(19, 19, 19, 0.3);
+    box-shadow: 0 2px 17px #131313;
+    box-shadow: 0 2px 17px rgba(19, 19, 19, 0.3);
   margin-bottom: 0;
 }
+
 .navbar-default .navbar-header .navbar-toggle {
   border-style: none;
 }
@@ -171,10 +175,12 @@ header .header-lead {
   padding: 0;
 }
 #intro .intro-content {
-  background-color: rgba(19, 19, 19, 0.3);
+    background-color: #131313;
+    background-color: rgba(19, 19, 19, 0.3);
   height: 500px;
   position: relative;
 }
+
 #intro .intro-content .intro-inner {
   position: absolute;
   top: 50%;
@@ -241,9 +247,9 @@ header .header-lead {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  -webkit-box-shadow: 0px 2px 17px rgba(19, 19, 19, 0.3);
-  -moz-box-shadow: 0px 2px 17px rgba(19, 19, 19, 0.3);
-  box-shadow: 0px 2px 17px rgba(19, 19, 19, 0.3);
+  -webkit-box-shadow: 0 2px 17px rgba(19, 19, 19, 0.3);
+  -moz-box-shadow: 0 2px 17px rgba(19, 19, 19, 0.3);
+  box-shadow: 0 2px 17px rgba(19, 19, 19, 0.3);
   border-radius: 3px;
   height: 240px;
   margin-bottom: 18px;
@@ -285,9 +291,9 @@ header .header-lead {
   background-repeat: no-repeat;
   background-size: cover;
   border-radius: 3px;
-  -webkit-box-shadow: 0px 2px 17px rgba(19, 19, 19, 0.3);
-  -moz-box-shadow: 0px 2px 17px rgba(19, 19, 19, 0.3);
-  box-shadow: 0px 2px 17px rgba(19, 19, 19, 0.3);
+  -webkit-box-shadow: 0 2px 17px rgba(19, 19, 19, 0.3);
+  -moz-box-shadow: 0 2px 17px rgba(19, 19, 19, 0.3);
+  box-shadow: 0 2px 17px rgba(19, 19, 19, 0.3);
   height: 300px;
   margin-bottom: 14px;
   overflow: hidden;
