--- a/PlanesTour/Content/styles.css
+++ b/PlanesTour/Content/styles.css
@@ -1,3 +1,4 @@
+/* ReSharper disable  CssNotResolved */
 /* ------------------------------
 
  Global Components 
@@ -5,30 +6,30 @@
 --------------------------------- */
 html,
 body {
-  height: 100%;
-  width: 100%;
+    height: 100%;
+    width: 100%;
 }
 
 body {
-  color: #131313;
-  font-family: "open sans", sans-serif;
-  font-size: 14px;
-  line-height: 1.8;
-  word-spacing: 2px;
+    color: #131313;
+    font-family: "open sans", sans-serif;
+    font-size: 14px;
+    line-height: 1.8;
+    word-spacing: 2px;
 }
 
 a,
 a:focus,
 a:hover {
-  color: #55AB26;
+    color: #55AB26;
 }
 
 hr.small {
-  background-color: #55AB26;
-  border-style: none;
-  height: 3px;
-  margin: 0 auto;
-  max-width: 50px;
+    background-color: #55AB26;
+    border-style: none;
+    height: 3px;
+    margin: 0 auto;
+    max-width: 50px;
 }
 
 h1,
@@ -37,34 +38,34 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "oswald", sans-serif;
-  font-weight: 700;
-  letter-spacing: 1px;
-  line-height: 1.8;
-  margin: 0 0 22px;
-  text-transform: uppercase;
+    font-family: "oswald", sans-serif;
+    font-weight: 700;
+    letter-spacing: 1px;
+    line-height: 1.8;
+    margin: 0 0 22px;
+    text-transform: uppercase;
 }
 
 p,
 ul {
-  margin-bottom: 22px;
+    margin-bottom: 22px;
 }
 
 ul.list-unstyled {
-  margin-bottom: 0;
+    margin-bottom: 0;
 }
 
 .bg-gray {
-  background-color: #eeeeee;
+    background-color: #eeeeee;
 }
 
 section,
 aside {
-  padding: 50px 0;
+    padding: 50px 0;
 }
 
 .page-content {
-  min-height: calc(100vh - 564px);
+    min-height: calc(100vh - 564px);
 }
 
 /* ------------------------------
@@ -73,12 +74,12 @@ aside {
  
 --------------------------------- */
 .logo img {
-  width: 160px;
+    width: 160px;
 }
 @media (min-width: 768px) {
-  .logo img {
-    width: 180px;
-  }
+    .logo img {
+        width: 180px;
+    }
 }
 
 /* ------------------------------
@@ -87,11 +88,11 @@ aside {
  
 --------------------------------- */
 header {
-  background-color: #131313;
-  padding: 18px 0;
+    background-color: #131313;
+    padding: 18px 0;
 }
 header .header-lead {
-  color: white;
+    color: white;
 }
 
 /* ------------------------------
@@ -101,68 +102,68 @@ header .header-lead {
 --------------------------------- */
 .navbar-default {
     background-color: #55AB26;
-  border-style: none;
+    border-style: none;
     -webkit-box-shadow: 0 2px 17px #131313;
     -webkit-box-shadow: 0 2px 17px #131313;
     -moz-box-shadow: 0 2px 17px #131313;
     -moz-box-shadow: 0 2px 17px rgba(19, 19, 19, 0.3);
     box-shadow: 0 2px 17px #131313;
     box-shadow: 0 2px 17px rgba(19, 19, 19, 0.3);
-  margin-bottom: 0;
+    margin-bottom: 0;
 }
 
 .navbar-default .navbar-header .navbar-toggle {
-  border-style: none;
+    border-style: none;
 }
 .navbar-default .navbar-header .navbar-toggle .icon-bar {
-  background-color: white;
+    background-color: white;
 }
 .navbar-default .navbar-header .navbar-toggle:focus, .navbar-default .navbar-header .navbar-toggle:hover {
-  background-color: #4b9621;
+    background-color: #4b9621;
 }
 .navbar-default .navbar-header .navbar-toggle:focus .icon-bar, .navbar-default .navbar-header .navbar-toggle:hover .icon-bar {
-  background-color: white;
+    background-color: white;
 }
 .navbar-default .navbar-collapse {
-  border-style: none;
+    border-style: none;
 }
 .navbar-default .nav > li > a {
-  color: white;
-  font-family: "oswald", sans-serif;
-  font-weight: 700;
-  letter-spacing: 1px;
-  padding: 14px 22px;
-  text-transform: uppercase;
-  -webkit-transition: all .3s;
-  -moz-transition: all .3s;
-  transition: all .3s;
+    color: white;
+    font-family: "oswald", sans-serif;
+    font-weight: 700;
+    letter-spacing: 1px;
+    padding: 14px 22px;
+    text-transform: uppercase;
+    -webkit-transition: all .3s;
+    -moz-transition: all .3s;
+    transition: all .3s;
 }
 .navbar-default .nav > li > a:focus, .navbar-default .nav > li > a:hover {
-  color: #131313;
+    color: #131313;
 }
 .navbar-default .nav > li.active > a,
 .navbar-default .nav > li.active > a:focus,
 .navbar-default .nav > li.active > a:hover {
-  background-color: transparent;
-  color: #131313;
+    background-color: transparent;
+    color: #131313;
 }
 @media (min-width: 768px) {
-  .navbar-default .nav > li > a {
-    border-bottom: 3px solid transparent;
-    border-top: 3px solid transparent;
-    padding: 18px 28px;
-  }
-  .navbar-default .nav > li > a:focus, .navbar-default .nav > li > a:hover {
-    border-bottom: 3px solid white;
-    color: white;
-  }
-  .navbar-default .nav > li.active > a,
-  .navbar-default .nav > li.active > a:focus,
-  .navbar-default .nav > li.active > a:hover {
-    background-color: transparent;
-    border-bottom: 3px solid white;
-    color: white;
-  }
+    .navbar-default .nav > li > a {
+        border-bottom: 3px solid transparent;
+        border-top: 3px solid transparent;
+        padding: 18px 28px;
+    }
+    .navbar-default .nav > li > a:focus, .navbar-default .nav > li > a:hover {
+        border-bottom: 3px solid white;
+        color: white;
+    }
+    .navbar-default .nav > li.active > a,
+    .navbar-default .nav > li.active > a:focus,
+    .navbar-default .nav > li.active > a:hover {
+        background-color: transparent;
+        border-bottom: 3px solid white;
+        color: white;
+    }
 }
 
 /* ------------------------------
@@ -171,35 +172,35 @@ header .header-lead {
  
 --------------------------------- */
 #intro {
-  color: white;
-  padding: 0;
+    color: white;
+    padding: 0;
 }
 #intro .intro-content {
     background-color: #131313;
     background-color: rgba(19, 19, 19, 0.3);
-  height: 500px;
-  position: relative;
+    height: 500px;
+    position: relative;
 }
 
 #intro .intro-content .intro-inner {
-  position: absolute;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  transform: translateY(-50%);
-  width: 100%;
+    position: absolute;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    transform: translateY(-50%);
+    width: 100%;
 }
 @media (min-width: 768px) {
-  #intro .intro-content .intro-heading {
-    font-size: 54px;
-  }
+    #intro .intro-content .intro-heading {
+        font-size: 54px;
+    }
 }
 #intro .vegas-timer {
-  height: 3px;
-  z-index: 9999999;
+    height: 3px;
+    z-index: 9999999;
 }
 #intro .vegas-timer .vegas-timer-progress {
-  background: #55AB26;
+    background: #55AB26;
 }
 
 /* ------------------------------
@@ -208,30 +209,30 @@ header .header-lead {
  
 --------------------------------- */
 .section-heading {
-  margin: 0 0 44px;
+    margin: 0 0 44px;
 }
 
 .card-location {
-  margin-bottom: 34px !important;
+    margin-bottom: 34px !important;
 }
 
 .card-location-detail {
-  margin-bottom: 24px !important;
+    margin-bottom: 24px !important;
 }
 .card-location-detail::after {
-  clear: both;
-  content: " ";
-  display: block;
+    clear: both;
+    content: " ";
+    display: block;
 }
 @media (min-width: 768px) {
-  .card-location-detail {
-    margin-bottom: 18px !important;
-  }
-  .card-location-detail .card-img {
-    float: left;
-    margin-right: 24px;
-    width: 260px !important;
-  }
+    .card-location-detail {
+        margin-bottom: 18px !important;
+    }
+    .card-location-detail .card-img {
+        float: left;
+        margin-right: 24px;
+        width: 260px !important;
+    }
 }
 
 /* ------------------------------
@@ -240,94 +241,94 @@ header .header-lead {
  
 --------------------------------- */
 .card-simple {
-  margin-bottom: 14px;
+    margin-bottom: 14px;
 }
 .card-simple .card-img {
-  background-color: #131313;
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-box-shadow: 0 2px 17px rgba(19, 19, 19, 0.3);
-  -moz-box-shadow: 0 2px 17px rgba(19, 19, 19, 0.3);
-  box-shadow: 0 2px 17px rgba(19, 19, 19, 0.3);
-  border-radius: 3px;
-  height: 240px;
-  margin-bottom: 18px;
-  width: 100%;
+    background-color: #131313;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    -webkit-box-shadow: 0 2px 17px rgba(19, 19, 19, 0.3);
+    -moz-box-shadow: 0 2px 17px rgba(19, 19, 19, 0.3);
+    box-shadow: 0 2px 17px rgba(19, 19, 19, 0.3);
+    border-radius: 3px;
+    height: 240px;
+    margin-bottom: 18px;
+    width: 100%;
 }
 .card-simple .card-img .card-img-obfuscar {
-  background-color: rgba(85, 171, 38, 0.6);
-  height: 100%;
-  position: relative;
-  opacity: 0;
-  text-align: center;
-  -webkit-transition: all .3s;
-  -moz-transition: all .3s;
-  transition: all .3s;
-  width: 100%;
+    background-color: rgba(85, 171, 38, 0.6);
+    height: 100%;
+    position: relative;
+    opacity: 0;
+    text-align: center;
+    -webkit-transition: all .3s;
+    -moz-transition: all .3s;
+    transition: all .3s;
+    width: 100%;
 }
 .card-simple .card-img .card-img-obfuscar span {
-  color: white;
-  left: 0;
-  position: absolute;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  transform: translateY(-50%);
-  width: 100%;
+    color: white;
+    left: 0;
+    position: absolute;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    transform: translateY(-50%);
+    width: 100%;
 }
 .card-simple .card-img .card-img-obfuscar:hover {
-  opacity: 1;
+    opacity: 1;
 }
 .card-simple .card-title {
-  margin: 0 0 12px;
+    margin: 0 0 12px;
 }
 .card-simple .star-rater {
-  margin-top: 14px;
+    margin-top: 14px;
 }
 
 .card-wide {
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  border-radius: 3px;
-  -webkit-box-shadow: 0 2px 17px rgba(19, 19, 19, 0.3);
-  -moz-box-shadow: 0 2px 17px rgba(19, 19, 19, 0.3);
-  box-shadow: 0 2px 17px rgba(19, 19, 19, 0.3);
-  height: 300px;
-  margin-bottom: 14px;
-  overflow: hidden;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 3px;
+    -webkit-box-shadow: 0 2px 17px rgba(19, 19, 19, 0.3);
+    -moz-box-shadow: 0 2px 17px rgba(19, 19, 19, 0.3);
+    box-shadow: 0 2px 17px rgba(19, 19, 19, 0.3);
+    height: 300px;
+    margin-bottom: 14px;
+    overflow: hidden;
 }
 .card-wide a,
 .card-wide a:focus,
 .card-wide a:hover {
-  color: white;
-  text-decoration: none;
+    color: white;
+    text-decoration: none;
 }
 .card-wide a {
-  display: block;
-  height: 100%;
-  position: relative;
-  width: 100%;
+    display: block;
+    height: 100%;
+    position: relative;
+    width: 100%;
 }
 .card-wide .card-content {
-  background-color: rgba(19, 19, 19, 0.6);
-  bottom: 0;
-  left: 0;
-  padding: 24px 28px;
-  position: absolute;
-  -webkit-transition: all .3s;
-  -moz-transition: all .3s;
-  transition: all .3s;
-  outline: 3px solid white;
-  outline-offset: -15px;
-  width: 100%;
+    background-color: rgba(19, 19, 19, 0.6);
+    bottom: 0;
+    left: 0;
+    padding: 24px 28px;
+    position: absolute;
+    -webkit-transition: all .3s;
+    -moz-transition: all .3s;
+    transition: all .3s;
+    outline: 3px solid white;
+    outline-offset: -15px;
+    width: 100%;
 }
 .card-wide .card-title {
-  margin: 0;
+    margin: 0;
 }
 .card-wide:hover .card-content {
-  outline-color: #55AB26;
+    outline-color: #55AB26;
 }
 
 /* ------------------------------
@@ -336,12 +337,12 @@ header .header-lead {
  
 --------------------------------- */
 .star-rater span {
-  color: #131313;
-  font-size: 16px;
-  margin: 0 6px;
+    color: #131313;
+    font-size: 16px;
+    margin: 0 6px;
 }
 .star-rater span.rating {
-  color: #EFC400;
+    color: #EFC400;
 }
 
 /* ------------------------------
@@ -351,71 +352,71 @@ header .header-lead {
 --------------------------------- */
 #owl-offers li,
 #owl-best-hotel li {
-  margin: 0 8px;
+    margin: 0 8px;
 }
 
 .owl-custom {
-  position: relative;
+    position: relative;
 }
 .owl-custom .prev,
 .owl-custom .next {
-  background-color: rgba(19, 19, 19, 0.6);
-  border-radius: 3px;
-  color: white;
-  cursor: pointer;
-  display: inline-block;
-  padding: 18px 24px;
-  position: absolute;
-  top: 33%;
-  -webkit-transform: traslateY(-50%);
-  -moz-transform: traslateY(-50%);
-  transform: traslateY(-50%);
-  -webkit-transition: all .3s;
-  -moz-transition: all .3s;
-  transition: all .3s;
+    background-color: rgba(19, 19, 19, 0.6);
+    border-radius: 3px;
+    color: white;
+    cursor: pointer;
+    display: inline-block;
+    padding: 18px 24px;
+    position: absolute;
+    top: 33%;
+    -webkit-transform: traslateY(-50%);
+    -moz-transform: traslateY(-50%);
+    transform: traslateY(-50%);
+    -webkit-transition: all .3s;
+    -moz-transition: all .3s;
+    transition: all .3s;
 }
 .owl-custom .prev > span,
 .owl-custom .next > span {
-  font-size: 44px;
+    font-size: 44px;
 }
 .owl-custom .prev:hover,
 .owl-custom .next:hover {
-  color: #55AB26;
+    color: #55AB26;
 }
 .owl-custom .prev {
-  left: 3%;
+    left: 3%;
 }
 .owl-custom .next {
-  right: 3%;
+    right: 3%;
 }
 @media (min-width: 1300px) {
-  .owl-custom .prev,
-  .owl-custom .next {
-    background-color: transparent;
-    color: #131313;
-    padding: 0;
-  }
-  .owl-custom .prev {
-    left: -3%;
-  }
-  .owl-custom .next {
-    right: -3%;
-  }
+    .owl-custom .prev,
+    .owl-custom .next {
+        background-color: transparent;
+        color: #131313;
+        padding: 0;
+    }
+    .owl-custom .prev {
+        left: -3%;
+    }
+    .owl-custom .next {
+        right: -3%;
+    }
 }
 .owl-custom .owl-controls {
-  margin-top: 30px;
+    margin-top: 30px;
 }
 .owl-custom .owl-controls .owl-pagination .owl-page span {
-  background-color: #131313;
-  height: 12px;
-  opacity: 1;
-  -webkit-transition: all .3s;
-  -moz-transition: all .3s;
-  transition: all .3s;
-  width: 12px;
+    background-color: #131313;
+    height: 12px;
+    opacity: 1;
+    -webkit-transition: all .3s;
+    -moz-transition: all .3s;
+    transition: all .3s;
+    width: 12px;
 }
 .owl-custom .owl-controls .owl-pagination .owl-page.active span {
-  background-color: #55AB26;
+    background-color: #55AB26;
 }
 
 /* ------------------------------
@@ -424,17 +425,17 @@ header .header-lead {
  
 --------------------------------- */
 #aside-footer {
-  background-color: #181818;
-  color: white;
+    background-color: #181818;
+    color: white;
 }
 #aside-footer .aside-footer-widget {
-  margin-bottom: 28px;
+    margin-bottom: 28px;
 }
 
 footer {
-  background-color: #131313;
-  color: white;
-  padding: 24px 0;
+    background-color: #131313;
+    color: white;
+    padding: 24px 0;
 }
 
 /* ------------------------------
@@ -443,18 +444,18 @@ footer {
  
 --------------------------------- */
 .text-gray {
-  color: #6f6f6f;
+    color: #6f6f6f;
 }
 
 .text-primary {
-  color: #55AB26;
+    color: #55AB26;
 }
 
 .badge {
-  border-radius: 3px;
-  font-size: 12px;
-  font-weight: 400;
-  padding: 10px 16px;
+    border-radius: 3px;
+    font-size: 12px;
+    font-weight: 400;
+    padding: 10px 16px;
 }
 
 /* ------------------------------
@@ -463,36 +464,36 @@ footer {
  
 --------------------------------- */
 .btn-primary {
-  background-color: #55AB26;
-  border-color: #55AB26;
-  border-width: 2px;
-  color: white;
-  -webkit-transition: all .3s;
-  -moz-transition: all .3s;
-  transition: all .3s;
+    background-color: #55AB26;
+    border-color: #55AB26;
+    border-width: 2px;
+    color: white;
+    -webkit-transition: all .3s;
+    -moz-transition: all .3s;
+    transition: all .3s;
 }
 .btn-primary:hover, .btn-primary:focus, .btn-primary.focus, .btn-primary:active, .btn-primary.active {
-  background-color: #4b9621 !important;
-  border-color: #4b9621 !important;
-  color: white !important;
+    background-color: #4b9621 !important;
+    border-color: #4b9621 !important;
+    color: white !important;
 }
 
 .btn {
-  border-radius: 3px;
-  font-size: 14px;
-  font-weight: 700;
-  line-height: 1.8;
-  text-transform: uppercase;
+    border-radius: 3px;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 1.8;
+    text-transform: uppercase;
 }
 .btn:active, .btn:focus {
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
-  box-shadow: none;
-  outline-style: none !important;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    outline-style: none !important;
 }
 
 .btn-xl {
-  padding: 14px 22px;
+    padding: 14px 22px;
 }
 
 /* ------------------------------
@@ -501,38 +502,38 @@ footer {
  
 --------------------------------- */
 .form-group {
-  margin-bottom: 24px;
+    margin-bottom: 24px;
 }
 
 label {
-  font-weight: 400;
-  margin-bottom: 14px;
+    font-weight: 400;
+    margin-bottom: 14px;
 }
 
 input.form-control,
 select.form-control,
 textarea.form-control {
-  border: 2px solid white;
-  border-radius: 3px;
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
-  box-shadow: none;
-  font-size: 14px;
-  height: auto;
-  line-height: 1.8;
-  padding: 14px 22px;
+    border: 2px solid white;
+    border-radius: 3px;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    font-size: 14px;
+    height: auto;
+    line-height: 1.8;
+    padding: 14px 22px;
 }
 input.form-control:focus,
 select.form-control:focus,
 textarea.form-control:focus {
-  border-color: #55AB26;
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
-  box-shadow: none;
+    border-color: #55AB26;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
 }
 
 textarea.form-control {
-  resize: vertical;
+    resize: vertical;
 }
 
 /* ------------------------------
@@ -541,15 +542,15 @@ textarea.form-control {
  
 --------------------------------- */
 ::-moz-selection {
-  background-color: #55AB26;
-  color: white;
-  text-shadow: none;
+    background-color: #55AB26;
+    color: white;
+    text-shadow: none;
 }
 
 ::selection {
-  background-color: #55AB26;
-  color: white;
-  text-shadow: none;
+    background-color: #55AB26;
+    color: white;
+    text-shadow: none;
 }
 
 /*# sourceMappingURL=styles.css.map */
