--- a/PlanesTour/Views/Home/Index.cshtml
+++ b/PlanesTour/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model PlanesTour.ViewModels.Home.Index
+﻿@using PlanesTour.Helpers
+@model PlanesTour.ViewModels.Home.Index
 
    <!-- Intro -->
 <section id="intro">
@@ -103,7 +104,7 @@
             {
             <li>
                 <figure class="card-simple text-center">
-                    <a href="">
+                    <a href="/hotels/@UrlHelperExtetions.SeoUrl(hotel.Id, hotel.Name)">
                         <div class="card-img" style="background-image: url('@hotel.Photos.FirstOrDefault().Path')" >
                 
                             <div class="card-img-obfuscar">
