--- a/PlanesTour/Views/Home/Index2.cshtml
+++ b/PlanesTour/Views/Home/Index2.cshtml
@@ -46,13 +46,13 @@
 <hr />
 <div class="row">
 
-    @foreach (var offert in Model.Offerts)
+    @foreach (var offer in Model.Offers)
     {
         <div class="col-md-4 portfolio-item">
             <a href="#">
                 <img class="img-responsive" src="~/Assets/Images/placeholdit400x300.png" alt="">
             </a>
-            <p>@offert.Description</p>
+            <p>@offer.Description</p>
         </div>
     }
 </div>
