--- a/PlanesTour/Views/Admin/Index.cshtml
+++ b/PlanesTour/Views/Admin/Index.cshtml
@@ -5,5 +5,5 @@
 
 <a href="admin" class="btn">Locations</a>
 <a href="hotels/admin" class="btn">Hotels</a>
-<a href="offerts.admin" class="btn">Offert</a>
+<a href="offers/admin" class="btn">Offers</a>
 
