Fix acerca de nosotros button not working

--- a/PlanesTour/Views/Shared/_Layout.cshtml
+++ b/PlanesTour/Views/Shared/_Layout.cshtml
@@ -74,7 +74,7 @@
                        @Html.Action("GetLocations", "Location")
                     </li>
                     <li>
-                        <a href="#">Acerca de nosotros</a>
+                        <a href="/about">Acerca de nosotros</a>
                     </li>
                 </ul>
             </div>
